compiler/src/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Start: peg$parseStart },
      peg$startRuleFunction  = peg$parseStart,

      peg$c0 = function(doc) { return doc; },
      peg$c1 = peg$anyExpectation(),
      peg$c2 = peg$otherExpectation("whitespace"),
      peg$c3 = "\t",
      peg$c4 = peg$literalExpectation("\t", false),
      peg$c5 = "\x0B",
      peg$c6 = peg$literalExpectation("\x0B", false),
      peg$c7 = "\f",
      peg$c8 = peg$literalExpectation("\f", false),
      peg$c9 = " ",
      peg$c10 = peg$literalExpectation(" ", false),
      peg$c11 = "\xA0",
      peg$c12 = peg$literalExpectation("\xA0", false),
      peg$c13 = "\uFEFF",
      peg$c14 = peg$literalExpectation("\uFEFF", false),
      peg$c15 = /^[\n\r\u2028\u2029]/,
      peg$c16 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], false, false),
      peg$c17 = peg$otherExpectation("end of line"),
      peg$c18 = "\n",
      peg$c19 = peg$literalExpectation("\n", false),
      peg$c20 = "\r\n",
      peg$c21 = peg$literalExpectation("\r\n", false),
      peg$c22 = "\r",
      peg$c23 = peg$literalExpectation("\r", false),
      peg$c24 = "\u2028",
      peg$c25 = peg$literalExpectation("\u2028", false),
      peg$c26 = "\u2029",
      peg$c27 = peg$literalExpectation("\u2029", false),
      peg$c28 = peg$otherExpectation("comment"),
      peg$c29 = function() { return { type: 'comment', value: text() }; },
      peg$c30 = "/*",
      peg$c31 = peg$literalExpectation("/*", false),
      peg$c32 = "*/",
      peg$c33 = peg$literalExpectation("*/", false),
      peg$c34 = ";",
      peg$c35 = peg$literalExpectation(";", false),
      peg$c36 = "//",
      peg$c37 = peg$literalExpectation("//", false),
      peg$c38 = peg$otherExpectation("digit"),
      peg$c39 = /^[0-9]/,
      peg$c40 = peg$classExpectation([["0", "9"]], false, false),
      peg$c41 = peg$otherExpectation("hex digit"),
      peg$c42 = /^[0-9a-fA-F]/,
      peg$c43 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false),
      peg$c44 = peg$otherExpectation("decimal number literal"),
      peg$c45 = /^[\-]/,
      peg$c46 = peg$classExpectation(["-"], false, false),
      peg$c47 = function(neg, digits) {
            return {
              type: 'number',
              value: parseInt((!neg ? '' : '-') + digits.join(''), 10)
            }
          },
      peg$c48 = peg$otherExpectation("positive decimal number literal"),
      peg$c49 = function(digits) { return { type: 'number', value: parseInt(text(), 10) } },
      peg$c50 = "$",
      peg$c51 = peg$literalExpectation("$", false),
      peg$c52 = "0x",
      peg$c53 = peg$literalExpectation("0x", false),
      peg$c54 = function(hexits) { return { type: 'number', value: parseInt(hexits.join(''), 16) } },
      peg$c55 = peg$otherExpectation("number literal"),
      peg$c56 = function(n) { return { type: 'number', value: n.value }; },
      peg$c57 = peg$otherExpectation("positive number literal"),
      peg$c58 = /^[a-zA-Z\-_]/,
      peg$c59 = peg$classExpectation([["a", "z"], ["A", "Z"], "-", "_"], false, false),
      peg$c60 = function(name) { return name.join('').toLowerCase(); },
      peg$c61 = peg$otherExpectation("directive"),
      peg$c62 = "#",
      peg$c63 = peg$literalExpectation("#", false),
      peg$c64 = /^[^\n\r]/,
      peg$c65 = peg$classExpectation(["\n", "\r"], true, false),
      peg$c66 = function(name, a) { return a.join(''); },
      peg$c67 = function(name, arg) { return { type: 'directive', name: name, arg: arg } },
      peg$c68 = peg$otherExpectation("instrument name"),
      peg$c69 = /^[a-z]/,
      peg$c70 = peg$classExpectation([["a", "z"]], false, false),
      peg$c71 = /^[a-zA-Z0-9\-_]/,
      peg$c72 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "-", "_"], false, false),
      peg$c73 = function(first, rest) { return first + rest.join('') },
      peg$c74 = function(chars) { return chars.join('') },
      peg$c75 = ":",
      peg$c76 = peg$literalExpectation(":", false),
      peg$c77 = function(name, value) { return { type: 'parameter', name: name, value: value } },
      peg$c78 = "{",
      peg$c79 = peg$literalExpectation("{", false),
      peg$c80 = ",",
      peg$c81 = peg$literalExpectation(",", false),
      peg$c82 = function(first, p) { return p },
      peg$c83 = "}",
      peg$c84 = peg$literalExpectation("}", false),
      peg$c85 = function(first, rest) {
            var body = {};
            if (first) body[first.name] = first.value;
            for (var i = 0; i < rest.length; i++) {
              body[rest[i].name] = rest[i].value;
            }
            return body;
          },
      peg$c86 = function(name, first, i) { return i },
      peg$c87 = function(name, first, rest) {
            return {
              type: 'instrument',
              name: name,
              bodies: [first].concat(rest)
            }
          },
      peg$c88 = peg$otherExpectation("command"),
      peg$c89 = /^[A-Z]/,
      peg$c90 = peg$classExpectation([["A", "Z"]], false, false),
      peg$c91 = function(channels, s) { return s },
      peg$c92 = function(channels, sequence) {
            return {
              type: 'command',
              channels: channels,
              sequence: optionalList(sequence)
            }
          },
      peg$c93 = /^[cdefgab]/,
      peg$c94 = peg$classExpectation(["c", "d", "e", "f", "g", "a", "b"], false, false),
      peg$c95 = "+",
      peg$c96 = peg$literalExpectation("+", false),
      peg$c97 = "-",
      peg$c98 = peg$literalExpectation("-", false),
      peg$c99 = ".",
      peg$c100 = peg$literalExpectation(".", false),
      peg$c101 = function(note, accidental, length, dots) {
            return {
              type: 'note',
              note: note,
              accidental: accidental,
              length: (length && length.value),
              dots: dots.length,
            }
          },
      peg$c102 = ">",
      peg$c103 = peg$literalExpectation(">", false),
      peg$c104 = function() { return { type: 'inc_octave' } },
      peg$c105 = "<",
      peg$c106 = peg$literalExpectation("<", false),
      peg$c107 = function() { return { type: 'dec_octave' } },
      peg$c108 = "@",
      peg$c109 = peg$literalExpectation("@", false),
      peg$c110 = function(inst) {
            var value;
            if (typeof inst === 'string') {
              value = { type: 'instrument_name', value: inst };
            } else {
              value = { type: 'anonymous_instrument', value: inst };
            }
            return { type: 'set_instrument', value: value };
          },
      peg$c111 = "t",
      peg$c112 = peg$literalExpectation("t", false),
      peg$c113 = function(num) { return { type: 'set_tempo', value: num.value }; },
      peg$c114 = "l",
      peg$c115 = peg$literalExpectation("l", false),
      peg$c116 = function(num) { return { type: 'set_note_length', value: num.value }; },
      peg$c117 = "q",
      peg$c118 = peg$literalExpectation("q", false),
      peg$c119 = function(num) { return { type: 'set_quantize', value: num.value }; },
      peg$c120 = "Q",
      peg$c121 = peg$literalExpectation("Q", false),
      peg$c122 = function(num) { return { type: 'set_quantize_frames', value: num.value }; },
      peg$c123 = "k",
      peg$c124 = peg$literalExpectation("k", false),
      peg$c125 = function(num) { return { type: 'set_delay', value: num.value }; },
      peg$c126 = "o",
      peg$c127 = peg$literalExpectation("o", false),
      peg$c128 = function(num) { return { type: 'set_octave', value: num.value }; },
      peg$c129 = "K",
      peg$c130 = peg$literalExpectation("K", false),
      peg$c131 = function(num) { return { type: 'transpose', value: num.value }; },
      peg$c132 = "p",
      peg$c133 = peg$literalExpectation("p", false),
      peg$c134 = function(num) { return { type: 'set_pitch', value: num.value }; },
      peg$c135 = "V",
      peg$c136 = peg$literalExpectation("V", false),
      peg$c137 = function(num) { return { type: 'set_timbre', value: num.value }; },
      peg$c138 = "v",
      peg$c139 = peg$literalExpectation("v", false),
      peg$c140 = function(num) { return { type: 'set_volume', value: num.value }; },
      peg$c141 = "v+",
      peg$c142 = peg$literalExpectation("v+", false),
      peg$c143 = function(num) { return { type: 'inc_volume', value: num }; },
      peg$c144 = "v-",
      peg$c145 = peg$literalExpectation("v-", false),
      peg$c146 = function(num) { return { type: 'dec_volume', value: num }; },
      peg$c147 = "[",
      peg$c148 = peg$literalExpectation("[", false),
      peg$c149 = "]",
      peg$c150 = peg$literalExpectation("]", false),
      peg$c151 = function(seq, times) {
            return {
              type: 'loop',
              body: optionalList(seq),
              times: ((times && times.value) || 1)
            };
          },
      peg$c152 = "(",
      peg$c153 = peg$literalExpectation("(", false),
      peg$c154 = ")",
      peg$c155 = peg$literalExpectation(")", false),
      peg$c156 = function(seq) {
            return {
              type: 'scope',
              body: optionalList(seq),
            };
          },
      peg$c157 = "r",
      peg$c158 = peg$literalExpectation("r", false),
      peg$c159 = function(length, dots) {
            return {
              type: 'rest',
              length: (length && length.value),
              dots: dots.length
            };
          },
      peg$c160 = "s",
      peg$c161 = peg$literalExpectation("s", false),
      peg$c162 = function(first, a) { return a },
      peg$c163 = function(first, rest) { return [first].concat(rest) },
      peg$c164 = "'",
      peg$c165 = peg$literalExpectation("'", false),
      peg$c166 = function(v, t) { return { type: 'repeated_number', value: v.value, times: t.value } },
      peg$c167 = function(from, to, s) { return s },
      peg$c168 = function(from, to, step) {
            return {
              type: 'interval',
              from: from.value,
              to: to.value,
              step: (step && step.value)
            };
          },
      peg$c169 = function() { return { type: 'symbol', value: text() }; },
      peg$c170 = "|",
      peg$c171 = peg$literalExpectation("|", false),
      peg$c172 = function() { return { type: 'loop_marker' }; },
      peg$c173 = function(first, v) { return v },
      peg$c174 = function(first, rest) { return [first].concat(rest); },
      peg$c175 = function(body) { return { type: 'sequence', value: optionalList(body) }; },
      peg$c176 = function(head, e) {return e},
      peg$c177 = function(head, tail) {
            var elements = [head];
            for (var i = 0; i < tail.length; i++) {
              elements = elements.concat(tail[i]);
            }
            elements = elements
              .filter(function(e) { return (e.type !== 'comment'); });
            return elements;
          },
      peg$c178 = function(body) { return { type: 'document', body: optionalList(body) }; },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse__();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseDocument();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse__();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSourceCharacter() {
    var s0;

    if (input.length > peg$currPos) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }

    return s0;
  }

  function peg$parseS() {
    var s0, s1;

    peg$silentFails++;
    if (input.charCodeAt(peg$currPos) === 9) {
      s0 = peg$c3;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 11) {
        s0 = peg$c5;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 12) {
          s0 = peg$c7;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 32) {
            s0 = peg$c9;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c10); }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 160) {
              s0 = peg$c11;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c12); }
            }
            if (s0 === peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 65279) {
                s0 = peg$c13;
                peg$currPos++;
              } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c14); }
              }
            }
          }
        }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }

    return s0;
  }

  function peg$parseLineTerminator() {
    var s0;

    if (peg$c15.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c16); }
    }

    return s0;
  }

  function peg$parseLineTerminatorSequence() {
    var s0, s1;

    peg$silentFails++;
    if (input.charCodeAt(peg$currPos) === 10) {
      s0 = peg$c18;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c19); }
    }
    if (s0 === peg$FAILED) {
      if (input.substr(peg$currPos, 2) === peg$c20) {
        s0 = peg$c20;
        peg$currPos += 2;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 13) {
          s0 = peg$c22;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c23); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 8232) {
            s0 = peg$c24;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c25); }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 8233) {
              s0 = peg$c26;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c27); }
            }
          }
        }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c17); }
    }

    return s0;
  }

  function peg$parseComment() {
    var s0, s1;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseMultiLineComment();
    if (s1 === peg$FAILED) {
      s1 = peg$parseSingleLineComment();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c29();
    }
    s0 = s1;
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c28); }
    }

    return s0;
  }

  function peg$parseMultiLineComment() {
    var s0, s1, s2, s3, s4, s5;
